Refactor moduleName/modulePackage parsing